# project_management_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  schemas.py
app/api/: routes_auth.py  routes_document.py  routes_project.py
